--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/jest": "24.0.17",
+    "@types/lodash": "^4.14.136",
     "@types/node": "12.7.1",
     "@types/react": "16.8.25",
     "@types/react-dom": "16.8.5",
+    "@types/styled-components": "^4.1.18",
+    "antd": "^3.21.4",
     "firebase": "^6.3.5",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "styled-components": "^4.3.2",
     "typescript": "3.5.3"
   },
   "scripts": {
